admin console was stopped and restarted.

2. [WEBACCESS] Fixed ganypass.pl to allow < and > chars in passwords

The ganypass.pl script, which provides a CGI interface to the
xmlclient for changing users' passwords, was improperly failing to
convert < and > to the XML entity escapes &lt; and &gt;, which could
cause the server's XML parser to reject password changes that involved
those characters.

3. [SERVER] Fixed object deletion journal processing on server start-up

The server had a bug that prevented successful startup if the server
was killed without getting a chance to consolidate the database into a
new ganymede.db file, and if one of the transactions in the journal
file involved an deleted object that had one or more
namespace-constrained database fields.

This was due to an attempt to use Ganymede.internalSession before that
variable was defined.  This has been fixed by making the
DBNameSpaceHandle.getField() method look up objects directly out of
the DBStore tables without using a GanymedeSession, if needed.

-------------------- Changes from 1.04 to 1.0.5 -------------------

RELEASE DATE: July 27, 2001

1. [DISTRIB] Fixed a number of bugs for JDK 1.4 compatibility

Fixed a few places that assumed SimpleTimeZone.getDefault()
would return an object of class SimpleTimeZone.

Fixed the jar packaging to satisfy Java 1.4's slightly pickier
serialization logic.

Because of these changes, the Ganymede 1.0.5 server will not be
compatible with clients from 1.04 or earlier.

2. [DISTRIB] Added support for using Java Web Start to launch clients

Sun's excellent Java Web Start provides the best way yet to launch the
Ganymede clients on Windows.  I have made changes to installWeb to
support the Java Web Start option in the Ganymede launcher.

3. [CLIENT] Fixed java.security.AccessControlException in client

On some versions of the JDK, the client, when running as an applet,
was refusing to allow changes to the animated build status icon in